dmsdk-android/2.2.1/更新日志.md
# 更新日志

该文档依据版本倒序记录了DMSDK Android端SDK的所有版本的更新日志以及从**前一个版本**迁移到每个版本的迁移指南。

当前的最新版本是**2.2.1_20191104**。

## v2.2.1_20191104

### 更新内容

 * TSKM模块新增QQ音乐拉起授权功能
 * 修改错误的API命名

### 迁移指南

通过GUID查询设备信息的API原来的签名为`getDeviceInfoListByDSN(TVSDeviceBindType, String, TVSCallback1<ArrayList<TVSDevice>>`，现改为`getDeviceInfoListByGUID(TVSDeviceBindType, String, TVSCallback1<ArrayList<TVSDevice>>`，若您使用到了该接口，请修改对应的名称。

## v2.2.0_20190912

### 更新内容

 * 各模块提高网络请求稳定性
 * 各模块移除无用资源，减小体积
 * Core模块修复LoadedApk被混淆导致在三星S9上崩溃的问题
 * 原Web模块修复debug开关实现错误问题
 * 原Web模块修复部分预设页面体验环境域名错误的问题
 * 原Web模块修复WebView潜在的内存泄漏问题
 * 原Web模块增加QQ验票的JS接口，并修复Cookie未设置问题
 * 原Web模块支持离线UI模版
 * 原Web模块独立为WebView SDK

### 迁移指南

从该版本开始，Web模块独立为[WebView SDK](/doc/page/303)。Javadoc文档和部分类均已迁移到该SDK中。

如果您用到了Web模块，那么需要修改依赖：

```groovy
dependencies {
    // 旧版本依赖，需要去除
    implementation "com.tencent.yunxiaowei.dmsdk:web:2.1.4"
    // 新版本改为下面的依赖
    implementation "com.tencent.yunxiaowei.webviewsdk:webviewsdk:2.2.0"
}
```

如果您同时用到了TSKM模块，那么需要在DMSDK的初始化之后将TSKM的第三方授权注入到WebView SDK中：

```java
TVSThirdPartyAuth.setupWithWeb();
```

如果您没有添加上面的依赖，那么云叮当授权功能将不能正常使用。

该版本移除了speaker和qrcode模块，您应该不会用到它们。

该版本移除了`EMiniProgType`和`MiniProgCallback`等小程序相关的类，您应该不会用到它们。

`AuthDelegate`接口新增了`tvsQQTokenVerify`方法，如果您实现了自定义的`AuthDelegate`，那么您需要新增该方法的实现。

WebView SDK中的`TVSWeb`移除了已经废弃的`init`接口，您不需要调用该接口。

WebView SDK中的`TVSWeb`移除了`getAuthDelegate`接口，您可以自行持有自定义`AuthDelegate`实例。

## v2.1.4_20190726

### 更新内容

*   Core模块修复第三方账号方案时绑定关系和ClientId潜在冲突的问题；
*   AISpeech、Member、Speaker、TSKM、Core等模块的接口支持第三方账号。

### 迁移指南

该版本开始，在第三方账号实现AuthDelegate的时候需要额外填写AppId字段，填入从Product ID中提取的App Key，详见[接入文档的相关章节](接入指南.md#3-接入第三方账号方案)。

## 2.1.3_20190625

### 1 更新内容

&emsp;&emsp;Core模块优化为不强制依赖微信和QQ登录的SDK，需要微信和QQ登录时需要额外配置，参考迁移指南；
&emsp;&emsp;Core模块修复若干QQ登录失败的问题；
&emsp;&emsp;Web模块修复若干录音相关的问题；
&emsp;&emsp;Web模块新增离线缓存加载控制；
&emsp;&emsp;Web模块新增调试开关；
&emsp;&emsp;TSKM模块API变更：reqQueryThirdPartAcctBindOp改为reqQueryThirdPartyAcctBindOp；
&emsp;&emsp;若干其他优化与问题修复。

### 2 迁移指南

该版本开始不再分发AAR文件，请参考[厂商APP接入配置指南](/doc/page/270)直接从Maven Central（或JCenter）添加依赖。

该版本开始需要您手动接入微信和QQ登录的相关配置，包括Manifest配置和Gradle依赖，请参考[厂商APP接入配置指南]（/doc/page/270)完成配置。

除此以外，TSKM模块API发生了变更：`reqQueryThirdPartAcctBindOp`改为`reqQueryThirdPartyAcctBindOp`。

## 2.1.2_20190516

### 1 更新内容

&emsp;&emsp;Web模块修复体验环境无法获得登录态的问题；
&emsp;&emsp;TSKM模块的多端互动API发送请求后会返回请求ID；
&emsp;&emsp;TSKM模块腾讯云小微授权API优化；
&emsp;&emsp;Core模块修复QQ登录回调随机性不被调用的问题；
&emsp;&emsp;SDK的请求超时时间缩短为10s；
&emsp;&emsp;SDK修改了生成的R文件的报名避免与旧版本腾讯IMSDK冲突；
&emsp;&emsp;移除无用资源，减小SDK体积。

### 2 迁移指南

TSKM模块的TVSThirdPartyAuth类的方法被重命名，`setAccountDeviceBound`被改为`reqThirdPartyAcctBindOp`，`getBoundAccountByDevice`被改为`reqQueryThirdPartAcctBindOp`。

## 2.1.1_20190419

该版本是测试版本，因此仅提供更新内容和迁移指南，不提供该版本的SDK。

### 1 更新内容

&emsp;&emsp;完善了TSKM模块对第三方账号的支持；
&emsp;&emsp;完善了腾讯云小微授权的API；
&emsp;&emsp;修复了Web模块停止录音时崩溃及execJS、execJSV2调用参数错误的问题；
&emsp;&emsp;修复了Core模块QQ登录ClientID不正确的问题。

### 2 迁移指南

Web模块针对非DMSDK账号体系进行了支持，其方式是接入方自行实现AuthDelegate接口。在该版本中，这个接口同样也被用于TSKM模块的第三方账号支持，因此，不再需要在TVSWeb#init中初始化自定义AuthDelegate，而是改为在LoginProxy#registerApp中的第四个参数中传入。

具体的API变更为：

&emsp;&emsp;1.&emsp;移除: `TVSAlarm`, `TVSChildMode`, `TVSReminder`, `TVSThirdPartyAuth`, `TVSDeviceControl`这五个类的三个参数版本的构造函数（即需要在第三个参数传入第三方账号ID的构造器）
&emsp;&emsp;2.&emsp;废弃: `TVSWeb#init(AuthDelegate)`，不需要继续调用，但接口功能仍然保留
&emsp;&emsp;3.&emsp;新增: `LoginProxy#register(Context, String, String, AuthDelegate)`，使用该初始化方法代替被废弃的`TVSWeb#init(AuthDelegate)`
&emsp;&emsp;4.&emsp;废弃: `TVSAuthDelegate(Context, LoginProxy)`，传入的参数不会被使用
&emsp;&emsp;5.&emsp;新增: `TVSAuthDelegate()`，使用该构造器替代被废弃的构造器
&emsp;&emsp;6.&emsp;新增: `LoginProxy#getAuthDelegate()`

具体的迁移方案为：

&emsp;1.&emsp;对TSKM模块使用的构造器替换为不传递账号ID的版本；
&emsp;2.&emsp;移除`TVSWeb#init(AuthDelegate)`的调用，如果该调用传递了自定义AuthDelegate，改为在registerApp中传入；
&emsp;3.&emsp;如果需要使用第三方账号支持，提供自定义AuthDelegate。

同时新增了[第三方账号方案的接入文档](第三方账号方案.md)。

另外，用于腾讯云小微授权的requestCloudDDAuth接口新增了参数。

## 2.1.0_20190415

### 1 更新内容

&emsp;&emsp;移除了所有兼容1.0版本的废弃接口，请参考2.0.0版本的迁移指南迁移。如果您是直接从2.0.0及以后版本全新接入的则没有影响；
&emsp;&emsp;TSKM模块新增了针对各个业务的类用于发送相应的请求，包括闹钟、提醒、多端互动、儿童模式控制；
&emsp;&emsp;TSKM和Web模块支持第三方腾讯云小微授权；
&emsp;&emsp;Core模块新增根据GUID查询设备信息接口。

### 2 迁移指南

如果您从2.0.0后以后版本全新接入则不需要迁移。否则，请参阅下面的2.0.0版本的迁移指南替换旧接口的调用。

## 2.0.2_20190329

### 1 更新内容

&emsp;&emsp;修复Web模块的ProxyData回调收到的JSONObject结构，保持与iOS端DMSDK的结果一致
&emsp;&emsp;修复了二维码模块一个Crash
&emsp;&emsp;修复了TAuthActivity的QQOpenAppID配置错误导致可能无法QQ登录的问题，该问题的具体影响和解决方案请见下面的迁移指南。

### 2 迁移指南

该版本修复了若干缺陷，其中需要适配的是ProxyData回传结构的变更，`BusinessEventListener#onReceiveProxyData(JSONObject)`方法原来返回的JSON结构为：
```json
{
   "cmd": "DDApi.proxydata",
   "data": {
      "someField": "someValue"
   },
   "id": "someIdYouMightNotCareAbout"
}
```
新的结构为：
```json
{
   "someField": "someValue"
}
```
移除了不必要的外层字段。

其次需要留意旧版本引入的QQ登录的缺陷。根据QQ互联接入文档，接入方需要在AndroidManifest.xml中增加`com.tencent.tauth.AuthActivity`，其Intent filter的scheme中需要指定为`tencent您的QQOpenID`，这个字段在旧版本SDK中被我们写死成demo的QQOpenID，在该版本SDK中我们修复了这个问题，但是需要在您的应用的Gradle脚本中配置manifest注入，将您的QQ互联App ID注入到Manifest中，具体改动如下（请将101470979替换为您申请的QQ互联App ID）：
```groovy
android {
    defaultConfig {
        manifestPlaceholders = [
                qqOpenAppId: "101470979"
        ]
        // Code...
    }
    // Code...
}
```
同时，旧版本的SDK可以通过直接在AndroidManifest.xml中指定该Activity的方式覆盖被SDK中的值：
```xml
<?xml version="1.0" encoding="utf-8"?>
<manifest xmlns:android="http://schemas.android.com/apk/res/android">
    <application>
        <activity
            android:name="com.tencent.tauth.AuthActivity"
            android:launchMode="singleTask"
            android:noHistory="true">
            <intent-filter>
                <action android:name="android.intent.action.VIEW" />

                <category android:name="android.intent.category.DEFAULT" />
                <category android:name="android.intent.category.BROWSABLE" />

                <data android:scheme="tencent您的AppID" />
            </intent-filter>
        </activity>
    </application>
</manifest>
```

## 2.0.1_20190319

### 1 更新内容

&emsp;&emsp;H5 模块新增链接加载拦截回调；

&emsp;&emsp;H5 模块新增智能家居页面；

&emsp;&emsp;Core 模块新增接口重复登录前是否登出；

&emsp;&emsp;Core 模块设备绑定相关接口修复不能获取设备businessExtra信息的问题。

### 2 迁移指南

无接口删改。

## 2.0.0_20190313

### 1 更新内容

&emsp;&emsp;模块化拆分，核心模块(环境配置/账号/设备绑定)为必须，H5 等模块根据需要可选；

&emsp;&emsp;H5 模块由`TVSAssistActivity`的形式改为 WebView 组件形式，可定制化程度更高；

&emsp;&emsp;H5 模块支持自己实现账号授权（不调用此 SDK 做登录和刷票）。

### 2 迁移指南

1.&emsp;**更换aar文件**。

   移除原来的tvsloginlib-release.aar，改为tvscore-2.0.0-release.aar，并根据需要添加以下aar文件：
   &emsp;AI Speech模块：tvsaispeech-2.0.0-release.aar
   &emsp;QQ音乐会员模块：tvsmember-2.0.0-release.aar
   &emsp;二维码业务模块：tvsqrcode-2.0.0-release.aar
   &emsp;音箱配置模块：tvsspeaker-2.0.0-release.aar
   &emsp;TSKM技能服务模块：tvstskm-2.0.0-release.aar
   &emsp;HTML5 WebView模块：tvsweb-2.0.0-release.aar

2.&emsp;**配置Application**

   打开Manifest文件，如果之前选择`com.tencent.ai.tvs.LoginApplication`，则需要自己新建自定义Application类并更改`application`标签的`name`属性为自定义的Application，LoginApplication已经被废弃。

   在自定义Application的`onCreate`方法中，新增以下初始化代码：

   ```java
   public class YourApplication extends Application {
       @Override
       public void onCreate() {
           super.onCreate();

           // 初始化TVS账号体系模块，依次传入应用上下文、微信AppID和QQ互联AppID；如果只需要支持一种登录平台，则另一个平台的AppID直接传入空字符串即可
           LoginProxy.getInstance().registerApp(this, "YOUR_WEIXIN_APPID", "YOUR_QQ_OPEN_APPID");
           // 如果要集成HTML5 WebView模块，需要初始化该模块，传入账号认证体系实现类的实例，一般按照下面的方式传入默认实现即可，详见该接口的接口文档
           TVSWeb.init(new TVSAuthDelegate(this, LoginProxy.getInstance()));
        }
    }
   ```

3.&emsp;**移除冗余配置**

   新版SDK优化了配置流程。

   移除Manifest文件中`com.tencent.tauth.AuthActivity`的Activity。

   移除Manifest文件中`qrom.component.wup.runInfo.QRomWupProvider`的Provider。

   移除`qrom.component.config.QromLogConfig`和`qrom.component.config.QromWupConfig`这两个类。

4.&emsp;**适配新API**

   新版SDK相比旧版对API进行了较大范围的调整，以下列举了所有改动的API和适配应对方案，请根据下面列举的清单逐一检查项目中对这些API的调用并进行调整。

   &emsp;**适配新的Web模块。**

      在旧版本中，SDK内嵌了一个TVSAssistActivity用于展示Web页面，这样的设计大大限制了可定制性，因此新版本中我们移除了该Activity和相关的接口，并增加了Web模块，提供了一个自定义View`TVSWebView`，您可以自行像使用普通的View一样使用该自定义View，并通过`TVSWebView#getController()`获取`TVSWebController`对象，该类提供了一系列接口。

      对于之前已经接入了微信登录或QQ登录SDK，现在希望直接集成TVS登录的情况，旧版SDK提供了`requestQRAuth`方法，在新的SDK中该方法已经被移除，取而代之的是`AuthDelegate`和`setDeviceInfo`，下面详述。

      WebView（指`TVSWebView`，下同）中的网页需要TVS登录时，会调用相关的接口，这些接口通过JsInterface机制调用到Web模块，Web模块会调用`AuthDelegate`这个interface的相关接口。因此，Web模块需要有一个实现了该interface的类用于响应，这可以在`Application#onCreate()`中调用`TVSWeb#setAuthDelegate()`实现，而核心模块提供了`TVSAuthDelegate`类，该类会调用SDK内的接口来完成登录等流程，因此默认使用该类即可。如果您已经接入了微信或QQ的登录SDK，希望直接接入TVS登录，可以自行实现这个interface并自行维护登录态，但要注意登录和验票流程中需要调用`LoginProxy#tvsAuth()`接口获得TVS ID才算完成相关流程。

      而对于Product ID、DSN等WebView需要用到的字段，则可以通过`TVSWebController#setDeviceInfo()`方法实现。

   &emsp;**后台环境切换。**

      旧版本的SDK提供了多个接口用于设置环境（`setLoginEnv`等方法），带来了不必要的困扰，新版本中我们废弃了这些接口，统一使用一个`LoginProxy#setEnv()`方法设置整个SDK的环境，包含Web模块、登录以及涉及的其他后台接口的环境，同时，不再需要您特意调用`initNetEnv()`方法初始化了。

   &emsp;**回调设计变更。**

      旧版本的SDK使用统一的AuthorizeListener和BindingListener来处理异步API的回调，造成了这两个类的实现过于厚重，不利于根据业务接偶，且带来了潜在的缺陷，因此经过评估，新版本中我们提供了一系列标准的`TVSCallback`、`TVSCallbackN`interface，并改造了API参数，为每个接口新增了回调参数，您可以为每个接口单独设置回调。

      尽管我们对大部分接口进行了兼容处理，使得大部分接口您不需要变更为新的参数列表的版本，但我们强烈建议您使用新的API，被废弃的API不会再维护，可能会导致不正确的表现，也可能会被移除。另外，**对于同一个接口，不要同时在旧版Listener中处理的同时又传入TVSCallback处理，这会导致两边都被调用，可能带来非预期的结果。**
      
      详细的接口变动列表请看下面的小节。

   &emsp;**废弃的类、字段和方法。**

      以下类、字段和方法被标记为废弃，但仍保持新版本之前既有的功能。虽然不修改这些调用不会产生影响，但这些内容在以后的版本有可能被移除，请尽快适配。每个条目均提供对应的适配方案。

      | 废弃条目 | 适配方案 |
      | --- | --- |
      | `LoginProxy#getInstance(String, String, Context)` | 改用`LoginProxy#getInstance()` |
      | `LoginProxy#requestLogin`系列方法 | 改用`LoginProxy#tvsLogin(ELoginPlatform, Activity, TVSCallback)` |
      | `LoginProxy#requestTokenVerify`系列方法 | 改用`LoginProxy#requestTokenVerify(ELoginPlatform)` |
      | `LoginProxy#isTokenExist(ELoginPlatform, Context)` | 改用`LoginProxy#isTokenExist(ELoginPlatform)`和`LoginProxy#isTokenExist()` |
      | `LoginProxy#clearToken(...)` | 改用`LoginProxy#logout()` |
      | `LoginProxy#requestGetCaptcha(...)` | 改用`LoginProxy#getCaptcha(...)` |
      | `LoginProxy#requestBindPhoneNumber(...)` | 改用`LoginProxy#bindPhoneNumber(...)` |
      | `LoginProxy#tvsAuth(ELoginPlatform, String)` | 改用`LoginProxy#tvsAuth(ELoginPlatform, String, TVSCallback1)` |
      | `LoginProxy#tvsQQOpenVerify(String, String, String)` | 改用`LoginProxy#tvsQQOpenVerify(String, String, TVSCallback1)` |
      | `com.tencent.ai.tvs.info.UserInfoManager` | 改用`com.tencent.ai.tvs.core.account.UserInfoManager` |
      | `LoginProxy#getInfoManager(ELoginPlatform)` | 改用`AccountInfoManager` |
      | `LoginInfoManager` | 改用`AccountInfoManager` |
      | `LoginProxy#getClientId(ELoginPlatform)` | 改用`AccountInfoManager#getClientId(String, String)` |
      | `LoginProxy#getUserId(ELoginPlatform)` | 改用`AccountInfoManager#getUserId()` |
      | `LoginProxy#setOwnActivity(...)` | 不必调用 |
      | `LoginProxy#toUserCenter(...)` | 改用`TVSWebController#toPresetURL(...)` |
      | `LoginProxy#requestGetDeviceAISpeechOption(...)` | 改用`TVSAISpeech#getDeviceAISpeechOption(...)` |
      | `LoginProxy#requestGetBotAISpeechOption(...)` | 改用`TVSAISpeech#getBotAISpeechOption(...)` |
      | `LoginProxy#requestSetBotAISpeechOption(...)` | 改用`TVSAISpeech#setBotAISpeechOption(...)` |
      | `LoginProxy#requestTskmUniAccess(...)` | 改用`TVSTSKM`类中的相应方法 |
      | `LoginProxy#initNetEnv()` | 不必调用 |
      | `LoginProxy#setLoginEnv(ELoginEnv)` | 改用`LoginProxy#setEnv(ELoginEnv)` |
      | `LoginProxy#setUserCenterEnv(ELoginEnv)` | 改用`LoginProxy#setEnv(ELoginEnv)` |
      | `LoginProxy#setAuthorizeListener(...)` | 改为使用各个接口的`TVSCallback`回调版本 |
      | `LoginProxy#setBindingListener(...)` | 改为使用各个接口的`TVSCallback`回调版本 |

   &emsp;**移除的类、字段和方法。**

      以下类、字段和方法已经被废弃甚至移除，调用后不能达到预期的效果，请根据下表适配。

      | 移除条目 | 适配方案 |
      | --- | --- |
      | `LoginProxy#requestSetPushMapInfoEx(...)` | 改用`LoginProxy#bindDevice(...)` |
      | `LoginProxy#requestDelPushMapInfo(...)` | 改用`LoginProxy#unbindDevice(...)` |
      | `LoginProxy#requestGetPushDeviceInfo(...)` | 改用`LoginProxy#getDeviceInfoListByAccount(...)` |
      | `LoginProxy#requestGetDeviceInfoList(...)` | 改用`LoginProxy`的`getDeviceInfoListByDSN(...)`或`getDeviceInfoListByAccount(...)` |
      | `LoginProxy#requestGetBoundAcctByPushInfo(...)` | 改用`LoginProxy#getBoundAccount(...)` |
      | `LoginProxy#requestQRAuth`系列方法 | 接入WebView模块然后自行实现`AuthDelegate` |
      | `LoginProxy#requestWebAuth(...)` | 接入WebView模块然后自行实现`AuthDelegate` |
      | `LoginProxy#tvsOpenUrl(...)` | 改用`TVSWebController#loadURL(...)` |
      | `LoginProxy#tvsOpenUrlWithCallback(...)` | 改用`TVSWebController#loadURL(...)` |
      | `LoginProxy#tvsRequestUrl(...)` | 改用`TVSWebController#loadURL(...)` |
      | `LoginProxy#tvsExecJS(...)` | 改用`TVSWebController#execJS(...)` |
      | `LoginProxy#tvsExecJSV2(...)` | 改用`TVSWebController#execJSV2(...)` |
      | `LoginProxy#tvsDismissAssist()` | 不必调用 |
      | `LoginProxy#tvsSetUser()` | 不必调用 |
      | `LoginProxy#manageAcct(...)` | 改用`tvsTokenVerify(TVSCallback)` |
      | `LoginProxy#readLoginInfo(...)` | 不必调用 |
      | `LoginProxy#registerProduct(String)` | 不使用云端配置，改用配置API（请查阅接口文档） |
      | `LoginProxy#getMemberStatus(ELoginPlatform, DeviceManager)` | 改用`TVSMember#getMemberStatus(String, String, TVSCallback3)` |
      | `LoginProxy#getDeviceStatus(ELoginPlatform, DeviceManager)` | 改用`TVSMember#getDeviceStatus(String, String, TVSCallback3)` |
      | `LoginProxy#requestAlarmManagement(...)` | 改用`TVSTSKM`模块 |
      | `CommOpInfo` | SDK内部类，外部不必使用 |
